--- a/src/main/resources/com/example/practica/client.fxml
+++ b/src/main/resources/com/example/practica/client.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica.Client">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fafafafa;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica.Client">
    <children>
       <Button fx:id="arenda_client" layoutX="260.0" layoutY="343.0" mnemonicParsing="false" text="Взять в аренду" />
       <Button fx:id="exit_client" layoutX="537.0" layoutY="27.0" mnemonicParsing="false" text="Назад" />
+      <ImageView fitHeight="176.0" fitWidth="244.0" layoutX="-50.0" layoutY="-42.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Image/Clipped_image_20240603.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
