--- a/src/main/resources/com/example/practica/regist.fxml
+++ b/src/main/resources/com/example/practica/regist.fxml
@@ -3,24 +3,52 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica.Regict">
     <children>
-        <Label layoutX="253.0" layoutY="28.0" text="Регистрация" textAlignment="CENTER">
+      <ImageView fitHeight="477.0" fitWidth="774.0" layoutX="-37.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Image/photo_02.jpg" />
+         </image>
+      </ImageView>
+        <Label layoutX="277.0" layoutY="41.0" text="Регистрация" textAlignment="CENTER">
             <font>
                 <Font size="36.0" />
             </font>
         </Label>
-        <TextField fx:id="CarName" layoutX="84.0" layoutY="108.0" prefHeight="35.0" prefWidth="201.0" text="Имя" />
-        <TextField fx:id="CarLastname" layoutX="84.0" layoutY="152.0" prefHeight="35.0" prefWidth="201.0" text="Фамилия " />
-        <TextField fx:id="CarSurname" layoutX="84.0" layoutY="200.0" prefHeight="35.0" prefWidth="201.0" text="Отчество" />
-        <TextField fx:id="CarPassword" layoutX="395.0" layoutY="247.0" prefHeight="35.0" prefWidth="201.0" text="Пароль" />
-        <TextField fx:id="CarLogin" layoutX="395.0" layoutY="200.0" prefHeight="35.0" prefWidth="201.0" text="Логин" />
-        <TextField fx:id="CarPassport" layoutX="395.0" layoutY="108.0" prefHeight="35.0" prefWidth="201.0" text="Серия и номер поспорта" />
-        <TextField fx:id="CarNumber" layoutX="395.0" layoutY="152.0" prefHeight="35.0" prefWidth="201.0" text="Номер телефона" />
-        <Button fx:id="CarButton" layoutX="288.0" layoutY="332.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="137.0" text="Зарегистрироваться" />
-      <Button fx:id="exit_regist" layoutX="634.0" layoutY="16.0" mnemonicParsing="false" text="Назад" />
+        <TextField fx:id="CarName" layoutX="153.0" layoutY="108.0" prefHeight="35.0" prefWidth="201.0" promptText="Имя" style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <TextField fx:id="CarLastname" layoutX="153.0" layoutY="152.0" prefHeight="35.0" prefWidth="201.0" promptText="Фамилия " style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <TextField fx:id="CarSurname" layoutX="153.0" layoutY="200.0" prefHeight="35.0" prefWidth="201.0" promptText="Отчество" style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <TextField fx:id="CarPassword" layoutX="280.0" layoutY="283.0" prefHeight="35.0" prefWidth="201.0" promptText="Пароль" style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <TextField fx:id="CarLogin" layoutX="280.0" layoutY="242.0" prefHeight="35.0" prefWidth="201.0" promptText="Логин" style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <TextField fx:id="CarPassport" layoutX="425.0" layoutY="108.0" prefHeight="35.0" prefWidth="201.0" promptText="Серия и номер поспорта" style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <TextField fx:id="CarNumber" layoutX="425.0" layoutY="152.0" prefHeight="35.0" prefWidth="201.0" promptText="Номер телефона" style="-fx-background-color: #DCDCDC;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></TextField>
+        <Button fx:id="CarButton" layoutX="311.0" layoutY="331.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="137.0" style="-fx-background-color: #2E3348;" text="Зарегистрироваться" textFill="WHITE" />
+      <Button fx:id="exit_regist" layoutX="637.0" layoutY="16.0" mnemonicParsing="false" style="-fx-background-color: #2E3348;" text="Назад" textFill="WHITE" />
     </children>
 </AnchorPane>
