--- a/src/main/resources/com/example/practica/client.fxml
+++ b/src/main/resources/com/example/practica/client.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -17,31 +16,17 @@
             <Image url="@Image/c5bd2748f3cdf994918ce3223ce85028.png" />
          </image>
       </ImageView>
-      <Button fx:id="arenda_client" layoutX="341.0" layoutY="347.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: #2E3348;" text="Взять в аренду" textFill="WHITE">
+      <Button fx:id="arenda_client" layoutX="310.0" layoutY="347.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: #2E3348;" text="Взять в аренду" textFill="WHITE">
          <font>
             <Font size="14.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="exit_client" layoutX="646.0" layoutY="20.0" mnemonicParsing="false" style="-fx-background-color: #2E3348;" text="Назад" textFill="WHITE" />
       <ImageView fitHeight="176.0" fitWidth="244.0" layoutX="-50.0" layoutY="-42.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Image/Clipped_image_20240603.png" />
          </image>
       </ImageView>
-      <RadioButton fx:id="radio_1hour" layoutX="588.0" layoutY="111.0" mnemonicParsing="false" text="1 час">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </RadioButton>
-      <RadioButton fx:id="radio_5hour" layoutX="588.0" layoutY="138.0" mnemonicParsing="false" text="5 часов">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </RadioButton>
-      <RadioButton fx:id="radio_1day" layoutX="590.0" layoutY="166.0" mnemonicParsing="false" text="1 день ">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </RadioButton>
       <TextField fx:id="Name_car" layoutX="14.0" layoutY="96.0" promptText="Имя" style="-fx-background-color: #DCDCDC;">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -53,14 +38,14 @@
          </font>
       </TextField>
       <Button fx:id="dshCar" layoutX="190.0" layoutY="50.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="105.0" />
-      <Button fx:id="srCar" layoutX="302.0" layoutY="50.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="105.0" />
-      <Button fx:id="drCar" layoutX="415.0" layoutY="50.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="121.0" />
-      <ImageView fitHeight="68.0" fitWidth="91.0" layoutX="311.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="srCar" layoutX="318.0" layoutY="50.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="105.0" />
+      <Button fx:id="drCar" layoutX="451.0" layoutY="49.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="121.0" />
+      <ImageView fitHeight="68.0" fitWidth="91.0" layoutX="325.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Image/photo_03.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="62.0" fitWidth="113.0" layoutX="419.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="62.0" fitWidth="113.0" layoutX="455.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Image/photo_04.jpg" />
          </image>
@@ -71,18 +56,9 @@
          </image>
       </ImageView>
       <Text layoutX="192.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Дешевый сегмент" />
-      <Text layoutX="309.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Средний сегмент" />
-      <Text layoutX="428.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Дорогой сегмент" />
-      <Label fx:id="LabelCar" alignment="CENTER" contentDisplay="CENTER" layoutX="552.0" layoutY="286.0" prefHeight="68.0" prefWidth="146.0" textAlignment="CENTER">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Text layoutX="591.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Стоимость">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Button fx:id="buttonCar_calc" alignment="CENTER" contentDisplay="CENTER" layoutX="586.0" layoutY="354.0" mnemonicParsing="false" style="-fx-background-color: #2E3348;" text="Рассчитать " textAlignment="CENTER" textFill="WHITE" />
+      <Text layoutX="323.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Средний сегмент" />
+
+      <Text layoutX="464.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Дорогой сегмент" />
+      <VBox fx:id="Vbox" layoutX="581.0" layoutY="192.0" prefHeight="186.0" prefWidth="113.0" />
    </children>
 </AnchorPane>
